# rust-identicons

./: .editorconfig  .gitignore  Cargo.toml  LICENSE  Makefile  README.md
src/: main.rs
